#10346 "동적차트"에서 대상 라벨리스트(태그)가 단순 스트링으로 처리되고 있음. -> 일감 분석 및 수정 진행

--- a/src/main/resources/public/template/chart/chartEdit.html
+++ b/src/main/resources/public/template/chart/chartEdit.html
@@ -33,8 +33,8 @@
 <div class="flex-column edit-row">
     <div class="flex-row">
         <div class="flex-column col-6 mr-4">
-            <label class="field-label required" th:text="#{chart.label.targetLabel}"/>
-            <input type="text" id="targetLabel" name="targetLabel" th:value="${chart?.targetLabel}" maxlength="100"/>
+            <label class="field-label required" th:text="#{chart.label.targetLabels}"/>
+            <input type="text" id="targetLabels" name="targetLabels" th:value="${chart?.targetLabels}" maxlength="100"/>
         </div>
         <div class="flex-column col-6">
             <label class="field-label" th:text="#{chart.label.operation}"/>
