tagify 버전업중 (테스트중)

--- a/src/main/resources/public/template/form/fragments/formHead.html
+++ b/src/main/resources/public/template/form/fragments/formHead.html
@@ -21,7 +21,7 @@
     <script th:src="@{/assets/vendors/quill/quill.js}"></script>
     <script th:src="@{/assets/vendors/dropzone/dropzone.js}"></script>
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
-    <script th:src="@{/assets/vendors/tagify/tagify.js}"></script>
+    <script th:src="@{/assets/vendors/tagify/tagify.js}" th:type="module"></script>
     <script th:src="@{/assets/js/util/fileuploader-alice.js}"></script>
     <script th:src="@{/assets/js/util/validation-alice.js}"></script>
     <script th:src="@{/assets/js/util/tree-alice.js}"></script>
