#10344 "동적차트"에서 차트 모달에 제목이 무조건 "장애유형별 카운트"로 나온다. -> 일감 분석 및 수정 진행

--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -220,9 +220,9 @@
         /**
          * Chart view 화면 호출 (Modal)
          */
-        function openChartViewModal(chartId, chartType) {
+        function openChartViewModal(chartId, chartType, chartName) {
             let chartOptions = {
-                title: i18n.msg('chart.label.viewTitle'),
+                title: chartName,
                 body: createModalContent(),
                 classes: 'chart-view-modal',
                 buttons: [{
