--- a/src/main/resources/public/template/chart/chartList.html
+++ b/src/main/resources/public/template/chart/chartList.html
@@ -25,7 +25,7 @@
             <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(chartList)}" th:each="chart: ${chartList}">
                 <td style="width: 15%;" class="align-left" th:text="#{|chart.${chart.chartType}|}"></td>
                 <td sec:authorize="hasAuthority('chart.create') || hasAuthority('chart.update')" style="width: 15%;"
-                    class="align-left underline point-fill pointer" th:onclick="openChartViewModal([[${chart.chartId}]], [[${chart.chartType}]])"
+                    class="align-left underline point-fill pointer" th:onclick="openChartViewModal([[${chart.chartId}]], [[${chart.chartType}]], [[${chart.chartName}]])"
                     th:text="${chart.chartName}">
                 </td>
                 <td style="width: 25%;" class="align-left" th:text="${chart.chartDesc}"></td>
