--- a/src/main/resources/public/template/formRefactoring/formDesigner.html
+++ b/src/main/resources/public/template/formRefactoring/formDesigner.html
@@ -104,55 +104,55 @@
                             </label>
                             <div class="accordion-content">
                                 <ul class="flex-row flex-wrap component-icon-box">
-                                    <li class="component-icon inputBox" id="inputBox">
+                                    <li class="component-icon inputBox draggable" id="inputBox" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-inputBox"></span>
                                         <span class="component-name" th:text="#{form.component.inputBox}"></span>
                                     </li>
-                                    <li class="component-icon textArea" id="textArea">
+                                    <li class="component-icon textArea draggable" id="textArea" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-textArea"></span>
                                         <span class="component-name" th:text="#{form.component.textArea}"></span>
                                     </li>
-                                    <li class="component-icon textEditor" id="textEditor">
+                                    <li class="component-icon textEditor draggable" id="textEditor" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-textEditor"></span>
                                         <span class="component-name" th:text="#{form.component.textEditor}"></span>
                                     </li>
-                                    <li class="component-icon dropdown" id="dropdown">
+                                    <li class="component-icon dropdown draggable" id="dropdown" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-dropdown"></span>
                                         <span class="component-name" th:text="#{form.component.dropdown}"></span>
                                     </li>
-                                    <li class="component-icon radio" id="radio">
+                                    <li class="component-icon radio draggable" id="radio" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-radio"></span>
                                         <span class="component-name" th:text="#{form.component.radio}"></span>
                                     </li>
-                                    <li class="component-icon checkBox" id="checkBox">
+                                    <li class="component-icon checkBox draggable" id="checkBox" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-checkBox"></span>
                                         <span class="component-name" th:text="#{form.component.checkBox}"></span>
                                     </li>
-                                    <li class="component-icon date" id="date">
+                                    <li class="component-icon date draggable" id="date" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-date"></span>
                                         <span class="component-name" th:text="#{form.component.date}"></span>
                                     </li>
-                                    <li class="component-icon time" id="time">
+                                    <li class="component-icon time draggable" id="time" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-time"></span>
                                         <span class="component-name" th:text="#{form.component.time}"></span>
                                     </li>
-                                    <li class="component-icon dateTime" id="dateTime">
+                                    <li class="component-icon dateTime draggable" id="dateTime" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-dateTime"></span>
                                         <span class="component-name" th:text="#{form.component.dateTime}"></span>
                                     </li>
-                                    <li class="component-icon fileUpload" id="fileUpload">
+                                    <li class="component-icon fileUpload draggable" id="fileUpload" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-fileUpload"></span>
                                         <span class="component-name" th:text="#{form.component.fileUpload}"></span>
                                     </li>
-                                    <li class="component-icon customCode" id="customCode">
+                                    <li class="component-icon customCode draggable" id="customCode" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-customCode"></span>
                                         <span class="component-name" th:text="#{form.component.customCode}"></span>
                                     </li>
-                                    <li class="component-icon dynamicRowTable" id="dynamicRowTable">
+                                    <li class="component-icon dynamicRowTable draggable" id="dynamicRowTable" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-dynamicRowTable"></span>
                                         <span class="component-name" th:text="#{form.component.dynamicRowTable}"></span>
                                     </li>
-                                    <li class="component-icon ci" id="ci">
+                                    <li class="component-icon ci draggable" id="ci" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-ci"></span>
                                         <span class="component-name" th:text="#{form.component.ci}"></span>
                                     </li>
@@ -168,15 +168,15 @@
                             </label>
                             <div class="accordion-content">
                                 <ul class="flex-row flex-wrap component-icon-box">
-                                    <li class="component-icon label" id="label">
+                                    <li class="component-icon label draggable" id="label" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-label"></span>
                                         <span class="component-name" th:text="#{form.component.label}"></span>
                                     </li>
-                                    <li class="component-icon image" id="image">
+                                    <li class="component-icon image draggable" id="image" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-image"></span>
                                         <span class="component-name" th:text="#{form.component.image}"></span>
                                     </li>
-                                    <li class="component-icon divider" id="divider">
+                                    <li class="component-icon divider draggable" id="divider" draggable="true" data-draggable-role="copy">
                                         <span class="icon icon-divider"></span>
                                         <span class="component-name" th:text="#{form.component.divider}"></span>
                                     </li>
