--- a/src/main/resources/public/assets/css/form2.css
+++ b/src/main/resources/public/assets/css/form2.css
@@ -676,17 +676,16 @@ input, button, select, optgroup, textarea {
   margin: 0;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon {
-  width: 7.75rem;
+  width: 7.813rem;
   height: 7.188rem;
   text-align: center;
+  border: 0.0625rem solid #EBEBEB;
+  margin-top: -0.0625rem;
+  margin-right: -0.0625rem;
   cursor: move;
 }
-.component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon:nth-child(odd) {
-  border-right: 0.0625rem solid #EBEBEB;
-  border-bottom: 0.0625rem solid #EBEBEB;
-}
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon:nth-child(even) {
-  border-bottom: 0.0625rem solid #EBEBEB;
+  flex: 1 1 auto;
 }
 .component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon:hover {
   background-color: rgba(235, 235, 235, 0.3);
@@ -920,6 +919,12 @@ input, button, select, optgroup, textarea {
   display: block;
   color: #ACB4BF;
 }
+.component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon.draggable.selected .icon {
+  background: #0098FF;
+}
+.component-accordion-box .component-accordion .accordion-content .component-icon-box .component-icon.draggable.selected .component-name {
+  color: #586872;
+}
 .component-accordion-box .component-accordion input[type=radio]:checked + .accordion-label .arrow-left {
   transform: rotate(-90deg);
 }
@@ -935,87 +940,6 @@ input, button, select, optgroup, textarea {
 .component-accordion-box .component-accordion input[type=radio]:checked ~ .accordion-content::-webkit-scrollbar {
   display: none;
   /* Chrome, Safari, Opera*/
-}
-
-.drawing-board .zenius-form {
-  display: inline-block;
-  min-height: 56.25rem;
-  background-color: #ffffff;
-  border: 0.0625rem solid #EBEBEB;
-  box-shadow: 0 0 0.9375rem 0 rgba(204, 206, 209, 0.3);
-}
-.drawing-board .zenius-form *:focus {
-  outline: none !important;
-}
-.drawing-board .zenius-group-accordion-checkBox {
-  position: absolute;
-  opacity: 0;
-  z-index: -1;
-}
-.drawing-board .zenius-group-label {
-  display: table;
-  width: 100%;
-  min-height: 2.5rem;
-  padding: 0 0.625rem 0 0.625rem;
-}
-.drawing-board .zenius-group-label.off {
-  display: none;
-}
-.drawing-board .zenius-group-label .zenius-group-label-text {
-  display: table-cell;
-  vertical-align: middle;
-  opacity: 1;
-}
-.drawing-board .zenius-group-label .arrow-left {
-  opacity: 0;
-  display: table-cell;
-  width: 0.75rem;
-  height: 1.25rem;
-  -webkit-mask-image: url("../media/icons/icon_arrow_left.svg");
-  mask-image: url("../media/icons/icon_arrow_left.svg");
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;
-  -webkit-mask-position: center;
-  mask-position: center;
-  background: #929AA6;
-}
-.drawing-board .zenius-group.accordion {
-  border-bottom: 0.0625rem solid #EBEBEB;
-}
-.drawing-board .zenius-group.accordion .zenius-group-accordion-checkBox:checked + .zenius-group-label {
-  border-bottom-color: #EBEBEB;
-}
-.drawing-board .zenius-group.accordion .zenius-group-accordion-checkBox:checked + .zenius-group-label .arrow-left {
-  transform: rotate(-90deg);
-}
-.drawing-board .zenius-group.accordion .zenius-group-accordion-checkBox:checked ~ .zenius-row-tooltip {
-  display: block;
-}
-.drawing-board .zenius-group.accordion .zenius-group-label {
-  border: 0.0625rem solid #EBEBEB;
-  background-color: #F7F8F9;
-  padding: 0 1.125rem 0 0.625rem;
-  cursor: pointer;
-  border-bottom-color: transparent;
-}
-.drawing-board .zenius-group.accordion .zenius-group-label.off {
-  display: table;
-}
-.drawing-board .zenius-group.accordion .zenius-group-label.off .zenius-group-label-text {
-  opacity: 0;
-}
-.drawing-board .zenius-group.accordion .zenius-group-label .zenius-group-label-text {
-  padding-right: 0.625rem;
-}
-.drawing-board .zenius-group.accordion .zenius-group-label .arrow-left {
-  opacity: 1;
-}
-.drawing-board .zenius-group.accordion .zenius-row-tooltip {
-  display: none;
-  transition: all 0.25s ease-out;
-}
-.drawing-board .zenius-component[data-displayType]:not([data-displayType=required]) .zenius-component-label span[class=required] {
-  display: none;
 }
 
 /* _elements.scss 
@@ -3950,4 +3874,156 @@ body.modal-active {
   animation-name: fadeIn;
   animation-timing-function: ease-out;
   animation-iteration-count: 1;
+}
+
+/* form, group, row, component 디자인 */
+:root {
+  --data-column: 12;
+  --data-row: 2;
+}
+
+.zenius-form {
+  display: inline-block;
+  min-height: 56.25rem;
+  background-color: #ffffff;
+  border: 0.0625rem solid #EBEBEB;
+  box-shadow: 0 0 0.9375rem 0 rgba(204, 206, 209, 0.3);
+}
+.zenius-form *:focus {
+  outline: none !important;
+}
+
+.zenius-group-tooltip {
+  padding: 1.25rem;
+  border: 0.0625rem solid transparent;
+  background-color: #ffffff;
+}
+.zenius-group-tooltip.selected {
+  border-color: #87CEFF;
+  background-color: rgba(135, 206, 255, 0.1);
+}
+
+.zenius-group-accordion-checkBox {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+}
+.zenius-group-label {
+  display: table;
+  width: 100%;
+  min-height: 2.5rem;
+  padding: 0 0.625rem 0 0.625rem;
+}
+.zenius-group-label.off {
+  display: none;
+}
+.zenius-group-label .zenius-group-label-text {
+  display: table-cell;
+  vertical-align: middle;
+  opacity: 1;
+}
+.zenius-group-label .arrow-left {
+  opacity: 0;
+  display: table-cell;
+  width: 0.75rem;
+  height: 1.25rem;
+  -webkit-mask-image: url("../media/icons/icon_arrow_left.svg");
+  mask-image: url("../media/icons/icon_arrow_left.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #929AA6;
+}
+.zenius-group.accordion {
+  border-bottom: 0.0625rem solid #EBEBEB;
+}
+.zenius-group.accordion .zenius-group-accordion-checkBox:checked + .zenius-group-label {
+  border-bottom-color: #EBEBEB;
+}
+.zenius-group.accordion .zenius-group-accordion-checkBox:checked + .zenius-group-label .arrow-left {
+  transform: rotate(-90deg);
+}
+.zenius-group.accordion .zenius-group-accordion-checkBox:checked ~ .zenius-row-tooltip {
+  display: block;
+}
+.zenius-group.accordion .zenius-group-label {
+  border: 0.0625rem solid #EBEBEB;
+  background-color: #F7F8F9;
+  padding: 0 1.125rem 0 0.625rem;
+  cursor: pointer;
+  border-bottom-color: transparent;
+}
+.zenius-group.accordion .zenius-group-label.off {
+  display: table;
+}
+.zenius-group.accordion .zenius-group-label.off .zenius-group-label-text {
+  opacity: 0;
+}
+.zenius-group.accordion .zenius-group-label .zenius-group-label-text {
+  padding-right: 0.625rem;
+}
+.zenius-group.accordion .zenius-group-label .arrow-left {
+  opacity: 1;
+}
+.zenius-group.accordion .zenius-row-tooltip {
+  display: none;
+  transition: all 0.25s ease-out;
+}
+
+.zenius-row-tooltip {
+  padding: 1.25rem;
+  border: 0.0625rem solid transparent;
+  background-color: #ffffff;
+}
+.zenius-row-tooltip.selected {
+  border-color: #87CEFF;
+  background-color: rgba(135, 206, 255, 0.1);
+}
+
+.zenius-row {
+  background-color: #F7F8F9;
+}
+
+.zenius-component-tooltip {
+  padding: 1.25rem;
+  border: 0.0625rem solid transparent;
+  background-color: #ffffff;
+}
+.zenius-component-tooltip.selected {
+  border-color: #87CEFF;
+  background-color: rgba(135, 206, 255, 0.1);
+}
+
+.zenius-component .zenius-field {
+  width: 100%;
+}
+.zenius-component .zenius-field .zenius-component-label {
+  flex-basis: calc((100% * var(--data-column, 12)) / 12);
+  padding-right: 0.938rem;
+}
+.zenius-component .zenius-field .zenius-component-label.on {
+  display: block;
+}
+.zenius-component .zenius-field .zenius-component-label.off {
+  display: none;
+}
+.zenius-component .zenius-field .zenius-element {
+  flex-basis: calc((100% * var(--data-column, 12)) / 12);
+}
+.zenius-component .zenius-field .zenius-element .input {
+  width: 100%;
+}
+
+.zenius-component[data-displayType]:not([data-displayType=required]) .zenius-component-label span[class=required] {
+  display: none;
+}
+
+.fake-draggable {
+  height: 0;
+}
+.fake-draggable.draggable-in {
+  height: 120px;
+  background-color: rgba(135, 206, 255, 0.1);
+  border: 0.0625rem dashed #87CEFF;
 }
