--- a/src/main/resources/public/assets/css/document.css
+++ b/src/main/resources/public/assets/css/document.css
@@ -81,45 +81,45 @@ input, button, select, optgroup, textarea {
 
 /* _alignments.scss 
  *
- * 파일 경로 : template/_alignments.scss
+ * 파일 경로 : template/utilities/_alignments.scss
  * @description 정렬, 배치 관련 디자인
  * @author jy.lim
  * @version 1.0
  */
 .align-center {
-  text-align: center;
+  text-align: center !important;
 }
 
 .align-left {
-  text-align: left;
+  text-align: left !important;
 }
 
 .align-right {
-  text-align: right;
+  text-align: right !important;
 }
 
 .align-baseline {
-  vertical-align: baseline;
+  vertical-align: baseline !important;
 }
 
 .align-top {
-  vertical-align: top;
+  vertical-align: top !important;
 }
 
 .align-middle {
-  vertical-align: middle;
+  vertical-align: middle !important;
 }
 
 .align-bottom {
-  vertical-align: bottom;
+  vertical-align: bottom !important;
 }
 
 .align-text-bottom {
-  vertical-align: text-bottom;
+  vertical-align: text-bottom !important;
 }
 
 .align-text-top {
-  vertical-align: text-top;
+  vertical-align: text-top !important;
 }
 
 .float-clear {
@@ -136,71 +136,71 @@ input, button, select, optgroup, textarea {
 
 /* _flex.scss
  *
- * 파일 경로 : template/_flex.scss
+ * 파일 경로 : template/utilities/_flex.scss
  * @description flex display 관련 디자인
  * @author jy.lim
  * @version 1.0
  */
 .flex-row {
   display: flex;
-  flex-direction: row;
+  flex-direction: row !important;
 }
 
 .flex-column {
   display: flex;
-  flex-direction: column;
+  flex-direction: column !important;
 }
 
 .inline-flex {
-  display: inline-flex;
+  display: inline-flex !important;
 }
 
 .justify-content-start {
-  justify-content: flex-start;
+  justify-content: flex-start !important;
 }
 
 .justify-content-end {
-  justify-content: flex-end;
+  justify-content: flex-end !important;
 }
 
 .justify-content-center {
-  justify-content: center;
+  justify-content: center !important;
 }
 
 .justify-content-between {
-  justify-content: space-between;
+  justify-content: space-between !important;
 }
 
 .align-items-start {
-  align-items: flex-start;
+  align-items: flex-start !important;
 }
 
 .align-items-end {
-  align-items: flex-end;
+  align-items: flex-end !important;
 }
 
 .align-items-center {
-  align-items: center;
+  align-items: center !important;
 }
 
 .align-items-baseline {
-  align-items: baseline;
+  align-items: baseline !important;
 }
 
 .align-self-start {
-  align-self: flex-start;
+  align-self: flex-start !important;
 }
 
 .align-self-end {
-  align-self: flex-end;
+  align-self: flex-end !important;
 }
 
 .align-self-center {
-  align-self: center;
+  align-self: center !important;
 }
 
 .align-self-baseline {
-  align-self: baseline;
+  align-self: baseline !important;
 }
 
 .flex-fill {
@@ -209,8 +209,8 @@ input, button, select, optgroup, textarea {
 
 /* _columns.scss 
  *
- * 파일 경로 : template/_columns.scss
- * @description HTML element 너비 관련 디자인
+ * 파일 경로 : template/utilities/_columns.scss
+ * @description HTML element column 너비 관련 디자인
  * @author jy.lim
  * @version 1.0
  */
@@ -310,6 +310,13 @@ input, button, select, optgroup, textarea {
   width: 100%;
 }
 
+/* _spacing.scss
+ *
+ * 파일 경로 : template/utilities/_spacing.scss
+ * @description HTML element padding, margin 여백 관련 디자인
+ * @author jy.lim
+ * @version 1.0
+ */
 .p-0 {
   padding: 0;
 }
@@ -412,7 +419,7 @@ input, button, select, optgroup, textarea {
 
 /* _common.scss 
  *
- * 파일 경로 : template/_common.scss
+ * 파일 경로 : template/utilities/_common.scss
  * @description 공통으로 사용되는 디자인
  * @author wdj
  * @version 1.0
