--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -81,45 +81,45 @@ input, button, select, optgroup, textarea {
 
 /* _alignments.scss 
  *
- * 파일 경로 : template/_alignments.scss
+ * 파일 경로 : template/utilities/_alignments.scss
  * @description 정렬, 배치 관련 디자인
  * @author jy.lim
  * @version 1.0
  */
 .align-center {
-  text-align: center;
+  text-align: center !important;
 }
 
 .align-left {
-  text-align: left;
+  text-align: left !important;
 }
 
 .align-right {
-  text-align: right;
+  text-align: right !important;
 }
 
 .align-baseline {
-  vertical-align: baseline;
+  vertical-align: baseline !important;
 }
 
 .align-top {
-  vertical-align: top;
+  vertical-align: top !important;
 }
 
 .align-middle {
-  vertical-align: middle;
+  vertical-align: middle !important;
 }
 
 .align-bottom {
-  vertical-align: bottom;
+  vertical-align: bottom !important;
 }
 
 .align-text-bottom {
-  vertical-align: text-bottom;
+  vertical-align: text-bottom !important;
 }
 
 .align-text-top {
-  vertical-align: text-top;
+  vertical-align: text-top !important;
 }
 
 .float-clear {
@@ -136,71 +136,71 @@ input, button, select, optgroup, textarea {
 
 /* _flex.scss
  *
- * 파일 경로 : template/_flex.scss
+ * 파일 경로 : template/utilities/_flex.scss
  * @description flex display 관련 디자인
  * @author jy.lim
  * @version 1.0
  */
 .flex-row {
   display: flex;
-  flex-direction: row;
+  flex-direction: row !important;
 }
 
 .flex-column {
   display: flex;
-  flex-direction: column;
+  flex-direction: column !important;
 }
 
 .inline-flex {
-  display: inline-flex;
+  display: inline-flex !important;
 }
 
 .justify-content-start {
-  justify-content: flex-start;
+  justify-content: flex-start !important;
 }
 
 .justify-content-end {
-  justify-content: flex-end;
+  justify-content: flex-end !important;
 }
 
 .justify-content-center {
-  justify-content: center;
+  justify-content: center !important;
 }
 
 .justify-content-between {
-  justify-content: space-between;
+  justify-content: space-between !important;
 }
 
 .align-items-start {
-  align-items: flex-start;
+  align-items: flex-start !important;
 }
 
 .align-items-end {
-  align-items: flex-end;
+  align-items: flex-end !important;
 }
 
 .align-items-center {
-  align-items: center;
+  align-items: center !important;
 }
 
 .align-items-baseline {
-  align-items: baseline;
+  align-items: baseline !important;
 }
 
 .align-self-start {
-  align-self: flex-start;
+  align-self: flex-start !important;
 }
 
 .align-self-end {
-  align-self: flex-end;
+  align-self: flex-end !important;
 }
 
 .align-self-center {
-  align-self: center;
+  align-self: center !important;
 }
 
 .align-self-baseline {
-  align-self: baseline;
+  align-self: baseline !important;
 }
 
 .flex-fill {
@@ -209,8 +209,8 @@ input, button, select, optgroup, textarea {
 
 /* _columns.scss 
  *
- * 파일 경로 : template/_columns.scss
- * @description HTML element 너비 관련 디자인
+ * 파일 경로 : template/utilities/_columns.scss
+ * @description HTML element column 너비 관련 디자인
  * @author jy.lim
  * @version 1.0
  */
@@ -310,6 +310,13 @@ input, button, select, optgroup, textarea {
   width: 100%;
 }
 
+/* _spacing.scss
+ *
+ * 파일 경로 : template/utilities/_spacing.scss
+ * @description HTML element padding, margin 여백 관련 디자인
+ * @author jy.lim
+ * @version 1.0
+ */
 .p-0 {
   padding: 0;
 }
@@ -412,7 +419,7 @@ input, button, select, optgroup, textarea {
 
 /* _common.scss 
  *
- * 파일 경로 : template/_common.scss
+ * 파일 경로 : template/utilities/_common.scss
  * @description 공통으로 사용되는 디자인
  * @author wdj
  * @version 1.0
@@ -529,209 +536,6 @@ input, button, select, optgroup, textarea {
 @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 700;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Bold.otf) format('opentype');}
 @font-face {font-family: 'Noto Sans KR';font-style: normal;font-weight: 900;src: url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff2) format('woff2'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.woff) format('woff'),url(//fonts.gstatic.com/ea/notosanskr/v2/NotoSansKR-Black.otf) format('opentype');}
 */
-/* _columns.scss 
- *
- * 파일 경로 : template/_columns.scss
- * @description HTML element 너비 관련 디자인
- * @author jy.lim
- * @version 1.0
- */
-.col-1 {
-  width: 5rem;
-}
-
-.col-2 {
-  width: 10rem;
-}
-
-.col-3 {
-  width: 15rem;
-}
-
-.col-4 {
-  width: 20rem;
-}
-
-.col-5 {
-  width: 25rem;
-}
-
-.col-6 {
-  width: 30rem;
-}
-
-.col-7 {
-  width: 35rem;
-}
-
-.col-8 {
-  width: 40rem;
-}
-
-.col-9 {
-  width: 45rem;
-}
-
-.col-10 {
-  width: 50rem;
-}
-
-.col-11 {
-  width: 55rem;
-}
-
-.col-12 {
-  width: 60rem;
-}
-
-.col-pct-1 {
-  width: 8.3333333333%;
-}
-
-.col-pct-2 {
-  width: 16.6666666667%;
-}
-
-.col-pct-3 {
-  width: 25%;
-}
-
-.col-pct-4 {
-  width: 33.3333333333%;
-}
-
-.col-pct-5 {
-  width: 41.6666666667%;
-}
-
-.col-pct-6 {
-  width: 50%;
-}
-
-.col-pct-7 {
-  width: 58.3333333333%;
-}
-
-.col-pct-8 {
-  width: 66.6666666667%;
-}
-
-.col-pct-9 {
-  width: 75%;
-}
-
-.col-pct-10 {
-  width: 83.3333333333%;
-}
-
-.col-pct-11 {
-  width: 91.6666666667%;
-}
-
-.col-pct-12 {
-  width: 100%;
-}
-
-.p-0 {
-  padding: 0;
-}
-
-.pl-0 {
-  padding-left: 0;
-}
-
-.pr-0 {
-  padding-right: 0;
-}
-
-.m-0 {
-  margin: 0;
-}
-
-.ml-0 {
-  margin-left: 0;
-}
-
-.ml-1 {
-  margin-left: 0.3125rem;
-}
-
-.ml-2 {
-  margin-left: 0.625rem;
-}
-
-.ml-3 {
-  margin-left: 0.9375rem;
-}
-
-.ml-4 {
-  margin-left: 1.25rem;
-}
-
-.ml-5 {
-  margin-left: 1.875rem;
-}
-
-.ml-auto {
-  margin-left: auto;
-}
-
-.mr-0 {
-  margin-right: 0;
-}
-
-.mr-1 {
-  margin-right: 0.3125rem;
-}
-
-.mr-2 {
-  margin-right: 0.625rem;
-}
-
-.mr-3 {
-  margin-right: 0.9375rem;
-}
-
-.mr-4 {
-  margin-right: 1.25rem;
-}
-
-.mr-5 {
-  margin-right: 1.875rem;
-}
-
-.mr-auto {
-  margin-right: auto;
-}
-
-.mt-0 {
-  margin-top: 0;
-}
-
-.mt-1 {
-  margin-top: 0.3125rem;
-}
-
-.mt-2 {
-  margin-top: 0.625rem;
-}
-
-.mt-3 {
-  margin-top: 0.9375rem;
-}
-
-.mt-4 {
-  margin-top: 1.25rem;
-}
-
-.mt-5 {
-  margin-top: 1.875rem;
-}
-
-.mt-auto {
-  margin-top: auto;
-}
-
 /* _layout.scss
  *
  * 파일 경로 : template/_layout.scss
