--- a/src/main/resources/public/src/scss/portal/portal.scss
+++ b/src/main/resources/public/src/scss/portal/portal.scss
@@ -11,14 +11,10 @@
 @import '../template/_variables.scss';      // 상속 불가
 @import '../template/_functions.scss';      // 상속 불가
 @import '../template/_mixins.scss';         // 상속 불가
-@import '../template/_alignments.scss';     // 상속 불가
-@import '../template/_flex.scss';           // 상속 불가
-@import '../template/_columns.scss';        // 상속 불가
-@import '../template/_common.scss';         // 상속 불가
+@import '../template/_utilities.scss';      // 상속 불가
 @import '_variables.scss';
 @import '_mixins.scss';
 @import '_fonts.scss';
-@import '_column.scss';
 @import '_layout.scss';
 @import '_elements.scss';
 @import '_buttons.scss';
