--- a/src/main/resources/public/template/form/formSearch.html
+++ b/src/main/resources/public/template/form/formSearch.html
@@ -265,6 +265,7 @@
                 }
             });
             formModal.show();
+            document.querySelector('.modal-dialog .point-fill').focus();
         }
 
         // REST API
@@ -411,6 +412,7 @@
                 }
             });
             importModal.show();
+            document.querySelector('.modal-dialog .default-line').focus();
         }
 
         //REST API
