--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -262,6 +262,7 @@
                 }
             });
             processModal.show();
+            document.querySelector('.modal-dialog .point-fill').focus();
         }
 
         // REST API
@@ -436,6 +437,7 @@
                 }
             });
             importModal.show();
+            document.querySelector('.modal-dialog .default-line').focus();
         }
 
         // REST API
