--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -271,7 +271,7 @@
                     // 모달 호출
                     const documentAdminModal = new modal(modalOptions);
                     documentAdminModal.show();
-
+                    document.querySelector('.modal-dialog .point-fill').focus();
                 },
                 contentType: 'application/json; charset=utf-8'
             });
