--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1237,15 +1237,13 @@ button.point-fill .icon {
   background: #ffffff;
   vertical-align: middle;
 }
-.btn.point-fill:focus, .btn.point-fill:hover,
-button.point-fill:focus,
+.btn.point-fill:hover,
 button.point-fill:hover {
   color: #ffffff;
   background-color: #33ADFF;
   border-color: transparent;
 }
-.btn.point-fill:focus .icon, .btn.point-fill:hover .icon,
-button.point-fill:focus .icon,
+.btn.point-fill:hover .icon,
 button.point-fill:hover .icon {
   background: #ffffff;
 }
@@ -1284,15 +1282,13 @@ button.point-line .icon {
   background: #0098FF;
   vertical-align: middle;
 }
-.btn.point-line:focus, .btn.point-line:hover,
-button.point-line:focus,
+.btn.point-line:hover,
 button.point-line:hover {
   color: #0098FF;
   background-color: rgba(0, 152, 255, 0.1);
   border-color: #0098FF;
 }
-.btn.point-line:focus .icon, .btn.point-line:hover .icon,
-button.point-line:focus .icon,
+.btn.point-line:hover .icon,
 button.point-line:hover .icon {
   background: #0098FF;
 }
@@ -1332,15 +1328,13 @@ button.default-fill .icon {
   background: #3F4B56;
   vertical-align: middle;
 }
-.btn.default-fill:focus, .btn.default-fill:hover,
-button.default-fill:focus,
+.btn.default-fill:hover,
 button.default-fill:hover {
   color: #3F4B56;
   background-color: #EBEBEB;
   border-color: transparent;
 }
-.btn.default-fill:focus .icon, .btn.default-fill:hover .icon,
-button.default-fill:focus .icon,
+.btn.default-fill:hover .icon,
 button.default-fill:hover .icon {
   background: #3F4B56;
 }
@@ -1379,15 +1373,13 @@ button.default-line .icon {
   background: #3F4B56;
   vertical-align: middle;
 }
-.btn.default-line:focus, .btn.default-line:hover,
-button.default-line:focus,
+.btn.default-line:hover,
 button.default-line:hover {
   color: #3F4B56;
   background-color: rgba(230, 230, 230, 0.3);
   border-color: #EBEBEB;
 }
-.btn.default-line:focus .icon, .btn.default-line:hover .icon,
-button.default-line:focus .icon,
+.btn.default-line:hover .icon,
 button.default-line:hover .icon {
   background: #3F4B56;
 }
@@ -1426,15 +1418,13 @@ button.ghost-fill .icon {
   background: #3F4B56;
   vertical-align: middle;
 }
-.btn.ghost-fill:focus, .btn.ghost-fill:hover,
-button.ghost-fill:focus,
+.btn.ghost-fill:hover,
 button.ghost-fill:hover {
   color: #3F4B56;
   background-color: rgba(230, 230, 230, 0.3);
   border-color: transparent;
 }
-.btn.ghost-fill:focus .icon, .btn.ghost-fill:hover .icon,
-button.ghost-fill:focus .icon,
+.btn.ghost-fill:hover .icon,
 button.ghost-fill:hover .icon {
   background: #3F4B56;
 }
@@ -1473,15 +1463,13 @@ button.ghost-line .icon {
   background: #CCCED1;
   vertical-align: middle;
 }
-.btn.ghost-line:focus, .btn.ghost-line:hover,
-button.ghost-line:focus,
+.btn.ghost-line:hover,
 button.ghost-line:hover {
   color: #3F4B56;
   background-color: #ffffff;
   border-color: #EBEBEB;
 }
-.btn.ghost-line:focus .icon, .btn.ghost-line:hover .icon,
-button.ghost-line:focus .icon,
+.btn.ghost-line:hover .icon,
 button.ghost-line:hover .icon {
   background: #3F4B56;
 }
