#10342 확인용 모달에서 버튼 효과 (hover, focus) -> focus style 원복

--- a/src/main/resources/public/src/scss/template/_buttons.scss
+++ b/src/main/resources/public/src/scss/template/_buttons.scss
@@ -165,6 +165,7 @@ button {
         vertical-align: middle;
       }
 
+      &:focus,
       &:hover {
         color: map-get($btn-hover-font-colors, #{$theme});
         background-color: map-get($btn-hover-bg-colors, #{$theme});
