#10337 동적차트 다운로드 기능 활성화 -> exporting.js 파일 추가

--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -40,6 +40,7 @@
 <th:block layout:fragment="pageScript">
     <script th:src="@{/assets/vendors/highCharts/highcharts.js}"></script>
     <script th:src="@{/assets/vendors/highCharts/modules/no-data-to-display.js}"></script>
+    <script th:src="@{/assets/vendors/highCharts/modules/exporting.js}"></script>
     <script th:src="@{/assets/vendors/highCharts/plugin/pattern-fill-v2.js}"></script>
     <script type="text/javascript">
         /*<![CDATA[*/
