--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -434,7 +434,7 @@ input, button, select, optgroup, textarea {
   font-weight: 700;
 }
 .required::after {
-  color: #FF405A;
+  color: #ff405a;
   content: "*";
 }
 
@@ -820,7 +820,7 @@ input, button, select, optgroup, textarea {
 .form-container .form-properties .property-group .error-msg {
   display: none;
   width: 100%;
-  color: #FF405A;
+  color: #ff405a;
   margin: 0.9375rem 0 0.3125rem 0;
 }
 .form-container .form-properties .property-group .error-msg.on {
@@ -935,8 +935,8 @@ input.icon {
   padding-right: 2.5rem;
 }
 input.error {
-  color: #FF405A !important;
-  border: 0.0625rem solid #FF405A !important;
+  color: #ff405a !important;
+  border: 0.0625rem solid #ff405a !important;
 }
 input[type=range] {
   -webkit-appearance: none;
@@ -1001,8 +1001,8 @@ textarea:read-only {
   cursor: default;
 }
 textarea.error {
-  color: #FF405A !important;
-  border: 0.0625rem solid #FF405A !important;
+  color: #ff405a !important;
+  border: 0.0625rem solid #ff405a !important;
 }
 
 table {
@@ -2029,7 +2029,7 @@ button.ghost-line:disabled .icon {
   mask-repeat: no-repeat;
   -webkit-mask-position: center;
   mask-position: center;
-  background: #FF405A;
+  background: #ff405a;
 }
 
 .btn-field {
@@ -2911,7 +2911,7 @@ button .icon-search {
   display: none;
 }
 .file-uploader-edit .dropzone .dz-preview.dz-error {
-  border-color: #FF405A;
+  border-color: #ff405a;
 }
 .file-uploader-edit .dropzone .dz-preview.dz-error .dz-error-message {
   display: block;
@@ -2958,7 +2958,7 @@ button .icon-search {
   mask-position: center;
   -webkit-mask-size: 1.125rem 1.25rem;
   mask-size: 1.125rem 1.25rem;
-  background: #FF405A;
+  background: #ff405a;
 }
 .file-uploader-edit .dropzone .dz-preview.dz-processing .dz-progress {
   opacity: 1;
