--- a/src/main/resources/public/src/scss/formRefactoring/_layout.scss
+++ b/src/main/resources/public/src/scss/formRefactoring/_layout.scss
@@ -178,11 +178,20 @@
 
 // drawing board
 .drawing-board {
-  // drag & drop
+  .drag-ghost {
+    opacity: 0.5;
+  }
   .drag-in {
-    height: 120px;
     background-color: rgba(135, 206, 255, 0.1);
-    border: 0.0625rem dashed $light-blue;; // 1px
+    border: 0.0625rem dashed $light-blue; // 1px
+  }
+  // drag & drop
+  .component-icon-drag-in {
+    display: inline-block;
+    width: 100%;
+    height: 7.875rem; // 126px
+    background-color: rgba(135, 206, 255, 0.1);
+    border: 0.0625rem dashed $light-blue; // 1px
     .icon { opacity: 0; }
     .component-name { opacity: 0; }
   }
