--- a/src/main/resources/public/src/scss/template/_variables.scss
+++ b/src/main/resources/public/src/scss/template/_variables.scss
@@ -30,7 +30,7 @@ $image-folder-path:                           '../media/images/';
 // color
 $black:                                       #000000;
 $white:                                       #ffffff;
-$red:                                         #FF405A;
+$red: #ff405a;
 $orange:                                      #FF7319;
 $green:                                       #00C462;
 $focus-black:                                 #283238;
