#9721 [단위 테스트 - 업무흐름] 사용 상태의 문서를 폐기 상태로 변경 시, 모달 창이 종료되지 않고 목록이 refresh 되지 않는다.

--- a/src/main/resources/public/template/workflow/workFlowSearch.html
+++ b/src/main/resources/public/template/workflow/workFlowSearch.html
@@ -132,6 +132,7 @@
                             if (documentId === undefined) { // 신규 등록일 경우에만 팝업 호출한다.
                                 openDocumentDisplay(result);
                             }
+                            location.reload();
                         });
                     });
                 }
